--- a/modules/admin/app/public/views/admin/login.hbs
+++ b/modules/admin/app/public/views/admin/login.hbs
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Like for Hello</title>
-        <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="styles/styles.css" rel="stylesheet">
+        <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/styles/styles.css" rel="stylesheet">
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
