--- a/modules/admin/app/public/views/admin/main.hbs
+++ b/modules/admin/app/public/views/admin/main.hbs
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Like for Hello</title>
-        <link href="styles/styles.min.css" rel="stylesheet">
+        <link href="/styles/styles.min.css" rel="stylesheet">
     </head>
     <body>
         <div class="container-fluid">
@@ -22,6 +22,6 @@
                 <div class="rect5"></div>
             </div>
         </div> <!-- /container -->
-            <script src="requirejs/require.js" data-main="scripts/app.js"></script>
+            <script src="/requirejs/require.js" data-main="scripts/app.js"></script>
         </body>
     </html>
