--- a/modules/admin/app/public/views/admin/login.hbs
+++ b/modules/admin/app/public/views/admin/login.hbs
@@ -57,7 +57,7 @@
     </head>
     <body>
         <div class="container">
-            <form action="/login" class="form-signin" role="form" method="post">
+            <form action="/super/login" class="form-signin" role="form" method="post">
                 <h2 class="form-signin-heading">Like for Hello</h2>
                 <input name="username" type="login" class="form-control" placeholder="Votre login" required autofocus>
                 <input name="password" type="password" class="form-control" placeholder="Mot de passe" required>
