--- a/modules/admin/app/public/views/admin/login.hbs
+++ b/modules/admin/app/public/views/admin/login.hbs
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Like for Hello</title>
+        <title>VVF Villages like you</title>
         <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="/styles/styles.css" rel="stylesheet">
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -58,7 +58,7 @@
     <body>
         <div class="container">
             <form action="/super/login" class="form-signin" role="form" method="post">
-                <h2 class="form-signin-heading">Like for Hello</h2>
+                <h2 class="form-signin-heading">VVF Villages like you</h2>
                 <input name="username" type="login" class="form-control" placeholder="Votre login" required autofocus>
                 <input name="password" type="password" class="form-control" placeholder="Mot de passe" required>
                 <input id="hash" name="hash" type="hidden">
