--- a/modules/admin/app/public/views/admin/main.hbs
+++ b/modules/admin/app/public/views/admin/main.hbs
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Like for Hello</title>
+        <title>VVF Villages like you</title>
         <link href="/styles/styles.min.css" rel="stylesheet">
     </head>
     <body>
