--- a/modules/admin/app/public/views/admin/main.hbs
+++ b/modules/admin/app/public/views/admin/main.hbs
@@ -10,7 +10,7 @@
     <body>
         <div class="container-fluid">
             <div class="col-sm-2">
-                {{> admin/nav}}
+                {{> nav}}
             </div>
             <div id="content" class="col-sm-10"></div>
 
