--- a/modules/admin/app/public/views/admin/partials/parameters.hbs
+++ b/modules/admin/app/public/views/admin/partials/parameters.hbs
@@ -5,5 +5,5 @@
         </div>
     </div>
 </nav>
-{{> settings/settings}}
-{{> settings/timetable}}
+{{> admin/settings/settings}}
+{{> admin/settings/timetable}}
