--- a/modules/admin/app/public/views/admin/partials/control/camera.hbs
+++ b/modules/admin/app/public/views/admin/partials/control/camera.hbs
@@ -78,7 +78,7 @@
         </div>
         {{/if}}
         {{#if is_connected}}
-        {{>control/camera_controls}}
+        {{>admin/control/camera_controls}}
         {{/if}}
     </div>
     <div class="panel-footer">
