--- a/modules/admin/app/public/views/admin/partials/dashboards.hbs
+++ b/modules/admin/app/public/views/admin/partials/dashboards.hbs
@@ -5,6 +5,6 @@
         </div>
     </div>
 </nav>
-{{> admin/dashboards/modules_list}}
-{{> admin/dashboards/stats}}
-{{> admin/dashboards/scores}}
+{{> dashboards/modules_list}}
+{{> dashboards/stats}}
+{{> dashboards/scores}}
