--- a/modules/admin/app/public/views/admin/partials/nav.hbs
+++ b/modules/admin/app/public/views/admin/partials/nav.hbs
@@ -1,7 +1,7 @@
 <div role="complementary" class="bs-docs-sidebar">
     <div role="navigation" class="navbar navbar-default">
         <div class="navbar-header">
-            <span class="navbar-brand">VVF Villages like you</span>
+            <span class="navbar-brand">VVF like you</span>
             <span class="navbar-brand pull-right state-alert"><span class="glyphicon glyphicon-asterisk text-muted"></span></span>
         </div>
         <ul class="nav bs-docs-sidenav">
