--- a/modules/admin/app/public/views/admin/main.hbs
+++ b/modules/admin/app/public/views/admin/main.hbs
@@ -22,6 +22,6 @@
                 <div class="rect5"></div>
             </div>
         </div> <!-- /container -->
-            <script src="/requirejs/require.js" data-main="../scripts/app.js"></script>
+            <script src="/requirejs/require.js" data-main="/scripts/app.js"></script>
         </body>
     </html>
