--- a/modules/admin/app/public/views/public/index.hbs
+++ b/modules/admin/app/public/views/public/index.hbs
@@ -18,7 +18,7 @@
         <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
     </head>
     <body>
-        <script src="scripts/script.js"></script>
+        <script src="/scripts/public/script.js"></script>
         <div class="container-fluid">
             <div class="col-sm-2">
                 <h1 id="fb-welcome"></h1>
