--- a/modules/admin/app/public/views/admin/main.hbs
+++ b/modules/admin/app/public/views/admin/main.hbs
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>VVF Villages like you</title>
-        <link href="/styles/styles.min.css" rel="stylesheet">
+        <link href="/styles/admin/styles.min.css" rel="stylesheet">
     </head>
     <body>
         <div class="container-fluid">
