--- a/modules/admin/app/public/views/public/index.hbs
+++ b/modules/admin/app/public/views/public/index.hbs
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Like for Hello</title>
+        <title>VVF Villages like you</title>
         <!-- Bootstrap -->
-        <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- <link href="eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" rel="stylesheet"> -->
         <!-- <link href="styles/styles.css" rel="stylesheet"> -->
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
