--- a/modules/admin/app/public/views/admin/partials/control/alert.hbs
+++ b/modules/admin/app/public/views/admin/partials/control/alert.hbs
@@ -57,11 +57,11 @@
             </div>
             <div class="row no-gutter">
                 <div class="col-sm-3">ip :</div>
-                <div class="col-sm-9">{{#if is_connected}}{{ip}}{{else}}N/A{{/if}}</div>
+                <div class="col-sm-9">{{ip}}</div>
             </div>
             <div class="row no-gutter">
                 <div class="col-sm-3">broker :</div>
-                <div class="col-sm-6">{{#if is_connected}}{{broker}}{{else}}N/A{{/if}}</div>
+                <div class="col-sm-6">{{broker}}</div>
                 <div class="col-sm-3"><a href="#" role="button" class="btn btn-warning btn-xs module-reconnect">Reconnecter</a></div>
             </div>
         </fieldset>
