--- a/modules/admin/app/public/views/admin/partials/control/alert.hbs
+++ b/modules/admin/app/public/views/admin/partials/control/alert.hbs
@@ -36,7 +36,7 @@
         <br>
         <div class="row">
             <div class="col-sm-12">
-                <fieldset {{#unless is_connected}}disabled{{/unless}}>
+                <fieldset>
                     {{#ifEq type "alert"}}
                     <div class="form-group">
                         <div class="btn-group">
