--- a/modules/admin/app/public/views/admin/partials/control/camera_controls.hbs
+++ b/modules/admin/app/public/views/admin/partials/control/camera_controls.hbs
@@ -123,7 +123,7 @@
         </form>
     </div>
 </div>
-<div class="row">
+{{!<div class="row">
     <div class="col-sm-12"><h3>System update</h3></div>
 </div>
 <div class="row">
@@ -140,4 +140,4 @@
             </fieldset>
         </form>
     </div>
-</div>
+</div>}}
