--- a/modules/admin/app/public/views/admin/partials/control/alert.hbs
+++ b/modules/admin/app/public/views/admin/partials/control/alert.hbs
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div class="panel-footer"><small>
-        <fieldset {{#unless is_connected}}disabled{{/unless}} class="container-fluid">
+        <fieldset class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-sm-3">mac :</div>
                 <div class="col-sm-6">{{#if mac}}{{mac}}{{else}}N/A{{/if}}</div>
