--- a/modules/admin/app/public/views/admin/main.hbs
+++ b/modules/admin/app/public/views/admin/main.hbs
@@ -22,6 +22,6 @@
                 <div class="rect5"></div>
             </div>
         </div> <!-- /container -->
-            <script src="https://fb.byperiscope.com/hello/likeforhello/modules/admin/app/public/scripts/admin/lib/requirejs/require.js" data-main="/scripts/admin/app.js"></script>
+            <script src="/lib/requirejs/require.js" data-main="/scripts/admin/app.js"></script>
         </body>
     </html>
