--- a/modules/admin/app/public/views/admin/partials/data/filters/dates.hbs
+++ b/modules/admin/app/public/views/admin/partials/data/filters/dates.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-    <form class="navbar-form navbar-left" role="form">
+    <form class="navbar navbar-form navbar-left" role="form">
         <div class="form-group">
             <button type="button" class="btn btn-default older">&laquo; Précédents</button>
         </div>
