--- a/modules/admin/app/public/views/admin/partials/data/photos.hbs
+++ b/modules/admin/app/public/views/admin/partials/data/photos.hbs
@@ -1,6 +1,6 @@
 {{#unless length}}
 <div class="row">
-    <div class="col-sm-{{../../cols}}">
+    <div class="col-sm-12">
         Aucune photo entre le {{formatDate startDate format='DD/MM/YYYY HH:mm'}} et le {{formatDate endDate format='DD/MM/YYYY HH:mm'}}
     </div>
 </div>
