--- a/modules/admin/app/public/views/admin/partials/nav.hbs
+++ b/modules/admin/app/public/views/admin/partials/nav.hbs
@@ -19,8 +19,7 @@
                 <ul class="nav">
                     <li><a href="#/data/photos">Photos</a></li>
                     <li><a href="#/data/visitors">Visiteurs</a></li>
-                    <li><a href="#/data/stats">Stats</a></li>
-                    <li><a href="#/data/scores">Scores</a></li>
+                    <li><a href="#/data/statistics">Statistiques</a></li>
                 </ul>
             </li>
             <li><a href="#/settings">Paramétrages</a>
