--- a/modules/admin/app/public/views/admin/partials/data/statistics.hbs
+++ b/modules/admin/app/public/views/admin/partials/data/statistics.hbs
@@ -1,11 +1,9 @@
-{{#unless length}}
-<div class="row">
-    <div class="col-sm-12">
-        Aucune information disponible entre le {{formatDate startDate format='DD/MM/YYYY HH:mm'}} et le {{formatDate endDate format='DD/MM/YYYY HH:mm'}}
-    </div>
+<div class="row statistics-score">
+
 </div>
-{{/unless}}
 <div class="row">
-    <div class="col-sm-12 statistic-team">
-    </div>
+    <div class="col-sm-12 statistic-team"></div>
+</div>
+<div class="row">
+    <div class="col-sm-12 statistic-stage"></div>
 </div>
