--- a/modules/admin/app/public/views/admin/partials/data/scores.hbs
+++ b/modules/admin/app/public/views/admin/partials/data/scores.hbs
@@ -2,3 +2,4 @@
 <div class="col-sm-3"><h4 class="text-center">Achats, Comptabilité, Juridique,<br>RH et Direction<br><br><span class="label label-default" style="background-color:#66CC66;">{{teamA}}</span></h4></div>
 <div class="col-sm-3"><h4 class="text-center">Communication,  Marketing <br>et Revenue Management<br><br><span class="label label-default" style="background-color:#FFCC00;">{{teamB}}</span></h4></div>
 <div class="col-sm-3"><h4 class="text-center">Commerciaux<br>grand public et groupes<br><br><span class="label label-default" style="background-color:#0099CC;">{{teamC}}</span></h4></div>
+<div class="col-sm-2"><button type="button" class="btn btn-default statistics-refresh"><span class="glyphicon glyphicon-refresh"></span></button></div>
