--- a/modules/admin/app/public/views/public/index.hbs
+++ b/modules/admin/app/public/views/public/index.hbs
@@ -23,15 +23,13 @@
             <div class="col-sm-2">
                 <h1 id="fb-welcome"></h1>
                 <div id="fb-root"></div>
-                <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
-
-                <button id="bonjour">L'équipe va vous dire un bonjour personnalisé</button>
-                <button id="logout">Logout</button>
+                {{!<div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
+                }}
+                {{!<button id="bonjour">L'équipe va vous dire un bonjour personnalisé</button>}}
+                {{!<button id="logout">Logout</button>}}
                 <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="true" data-scope="email, publish_actions" onlogin="loginButtonPushed"></div>
             </div>
-            <div id="content" class="col-sm-10">
-            </div>
-            </div> <!-- /container -->
-            <!-- <script src="requirejs/require.js" data-main="scripts/app"></script> -->
-        </body>
-    </html>
+            <div id="content" class="col-sm-10"></div>
+        </div>
+    </body>
+</html>
