--- a/modules/admin/app/public/views/admin/partials/data/filters/visitors.hbs
+++ b/modules/admin/app/public/views/admin/partials/data/filters/visitors.hbs
@@ -4,10 +4,13 @@
 <div class="form-group">
     <div class="btn-group" data-toggle="buttons">
         <label class="btn btn-default active filter-all">
-            <input type="radio" name="filter-queue" autocomplete="off" checked> Tous
+            <input type="radio" name="filter" autocomplete="off" checked> Tous
         </label>
         <label class="btn btn-default filter-queue">
-            <input type="radio" name="filter-queue" autocomplete="off"> En attente
+            <input type="radio" name="filter" autocomplete="off"> Dans la fil d'attente
+        </label>
+        <label class="btn btn-default filter-error">
+            <input type="radio" name="filter" autocomplete="off"> En erreur
         </label>
     </div>
 </div>
