--- a/modules/admin/app/public/views/admin/partials/data/visitor.hbs
+++ b/modules/admin/app/public/views/admin/partials/data/visitor.hbs
@@ -20,7 +20,7 @@
         Dernière visite <strong><span title="{{formatDate updatedAt}}">{{fromNow updatedAt}}</span></strong><br>
         Access Token : <strong title="{{access_token}}">{{ellipsis 20 access_token}}...</strong><br>
         Expanded Token : <strong title="{{access_token}}">{{ellipsis 20 expanded_access_token}}...</strong><br>
-        {{#if facebook_post_id}}<a href="https://facebook.com/{{facebook_post_id}}" target="_blank">Voir sur Facebook</a>{{else}} <button {{#ifEq granted_publish_actions 0}}disabled{{/ifEq}} class="btn btn-default btn-sm data-republish">{{#ifEq granted_publish_actions 0}}Publication impossible sans les droits utilisateurs{{else}}Publier à nouveau sur Facebook{{/ifEq}}</button> {{/if}}
+        <button {{#if facebook_post_id}}style="visibility:hidden;"{{/if}} {{#ifEq granted_publish_actions 0}}disabled{{/ifEq}} class="btn btn-default btn-sm data-republish">{{#ifEq granted_publish_actions 0}}Publication impossible sans les droits utilisateurs{{else}}Publier à nouveau sur Facebook{{/ifEq}}</button>
         {{#if Hello.Photos.filename}}
         {{#with Hello.Photos}}
         <div class="thumbnail">
