--- a/modules/admin/app/public/views/admin/partials/nav.hbs
+++ b/modules/admin/app/public/views/admin/partials/nav.hbs
@@ -19,6 +19,7 @@
                 <ul class="nav">
                     <li><a href="#/data/photos">Photos</a></li>
                     <li><a href="#/data/visitors">Visiteurs</a></li>
+                    <li><a href="#/data/visits">Visits</a></li>
                     <li><a href="#/data/scores">Résultats</a></li>
                 </ul>
             </li>
