--- a/modules/admin/app/public/views/admin/partials/dashboards.hbs
+++ b/modules/admin/app/public/views/admin/partials/dashboards.hbs
@@ -5,6 +5,7 @@
         </div>
     </div>
 </nav>
-{{> dashboards/modules_list}}
+<div class="dashboard-content"></div>
+<!-- {{> dashboards/modules_list}}
 {{> dashboards/stats}}
-{{> dashboards/scores}}
+{{> dashboards/scores}} -->
