--- a/modules/admin/app/public/views/admin/partials/dashboards/scores.hbs
+++ b/modules/admin/app/public/views/admin/partials/dashboards/scores.hbs
@@ -4,28 +4,19 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-sm-3">
-    <div class="alert alert-success" role="alert">
-      <div><a href="#" class="alert-link">Équipe A <span class="badge pull-right">294</span></a></div>
-      <small>Dernière photo <mark><time>18 août 2014</time></mark></small>
+  <div class="col-sm-4">
+    <div class="alert alert-success" style="background-color:#66CC66;" role="alert">
+      <div><a href="#/data/scores" class="alert-link">{{teamA.name}} <span class="badge pull-right">{{teamA.score}}</span></a></div>
     </div>
   </div>
-  <div class="col-sm-3">
-    <div class="alert alert-success" role="alert">
-      <div><a href="#" class="alert-link">Équipe B <span class="badge pull-right">294</span></a></div>
-      <small>Dernière photo <mark><time>18 août 2014</time></mark></small>
+  <div class="col-sm-4">
+    <div class="alert alert-success" style="background-color:#FFCC00;" role="alert">
+      <div><a href="#/data/scores" class="alert-link">{{teamB.name}} <span class="badge pull-right">{{teamB.score}}</span></a></div>
     </div>
   </div>
-  <div class="col-sm-3">
-    <div class="alert alert-success" role="alert">
-      <div><a href="#" class="alert-link">Équipe C <span class="badge pull-right">294</span></a></div>
-      <small>Dernière photo <mark><time>18 août 2014</time></mark></small>
-    </div>
-  </div>
-  <div class="col-sm-3">
-    <div class="alert alert-success" role="alert">
-      <div><a href="#" class="alert-link">Équipe D <span class="badge pull-right">294</span></a></div>
-      <small>Dernière photo <mark><time>18 août 2014</time></mark></small>
+  <div class="col-sm-4">
+    <div class="alert alert-success" style="background-color:#0099CC;" role="alert">
+      <div><a href="#/data/scores" class="alert-link">{{teamC.name}} <span class="badge pull-right">{{teamC.score}}</span></a></div>
     </div>
   </div>
 </div>
