--- a/modules/admin/app/public/views/public/index.hbs
+++ b/modules/admin/app/public/views/public/index.hbs
@@ -21,7 +21,7 @@
         <script src="/scripts/public/script.js"></script>
         <div class="container-fluid">
             <div class="col-sm-2">
-                <h1 id="fb-welcome"></h1>
+                <h1 id="fb-welcome">VVF Villages va vous dire un Bonjour personnalisé</h1>
                 <div id="fb-root"></div>
                 {{!<div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
                 }}
