--- a/modules/admin/app/public/views/public/index.hbs
+++ b/modules/admin/app/public/views/public/index.hbs
@@ -21,8 +21,8 @@
         <script src="/scripts/public/script.js"></script>
         <img src="/styles/public/img/accueil_facebook_review.jpg" usemap="#test">
 
-        <map name="planetmap">
-          <area shape="rect" coords="430,427,724,975" id="connection" href="#" alt="Connexion">
+        <map name="test">
+          <area shape="rect" coords="430,927,724,975" id="connection" href="#" alt="Connexion">
         </map>
     </body>
 </html>
