--- a/modules/admin/app/public/views/public/index.hbs
+++ b/modules/admin/app/public/views/public/index.hbs
@@ -19,8 +19,7 @@
     </head>
     <body>
         <script src="/scripts/public/script.js"></script>
-        <img src="/styles/public/img/accueil_facebook_review.jpg" usemap="#test">
-
+        <img id="review_img" src="/styles/public/img/accueil_facebook_review.jpg" usemap="#test">
         <map name="test">
           <area shape="rect" coords="430,927,724,975" id="connection" href="#" alt="Connexion">
         </map>
