--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -1,21 +1,4 @@
-<!DOCTYPE html>
-<html lang="fr-FR">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VVF Villages like you</title>
-    <link rel="stylesheet" type="text/css" media="all" href="css/styles.css" />
-    <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
-	<!--[if lt IE 9]>
-       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-</head>
-<!--[if lt IE 7]> <body class="ie6"><![endif]-->
-<!--[if IE 7]>    <body class="ie7"><![endif]-->
-<!--[if IE 8]>    <body class="ie8"><![endif]-->
-<!--[if IE 9]>    <body class="ie9"><![endif]-->
-<!--[if gt IE 9]> <body><![endif]-->
-<!--[if !IE]><!--><body><!--<![endif]-->
+{{> head}}
 <div id="wrapper">
     <img src="gfx/header_accueil.jpg" width="811" height="293" alt="VVF Villages like you" class="header-accueil">
      <div class="feuille">
@@ -42,5 +25,4 @@
         <div class="conditions">*Soumis à conditions</div>
    </div>
 </div>
-</body>
-</html>
+{{> footer}}
