--- a/modules/admin/app/public/styles/public/styles.css
+++ b/modules/admin/app/public/styles/public/styles.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'futurastd-bold';
-    src: url('../font/futurastd-bold.eot');
-    src: url('../font/clarendon_b_cn-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../font/futurastd-bold.woff') format('woff'),
-         url('../font/futurastd-bold.ttf') format('truetype'),
-         url('../font/futurastd-bold.svg#futurastd-bold') format('svg');
+    src: url('/styles/public/font/futurastd-bold.eot');
+    src: url('/styles/public/font/clarendon_b_cn-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/styles/public/font/futurastd-bold.woff') format('woff'),
+         url('/styles/public/font/futurastd-bold.ttf') format('truetype'),
+         url('/styles/public/font/futurastd-bold.svg#futurastd-bold') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -287,9 +287,9 @@ strong {
     font-weight: 700;
 }
 h1 {
-    
+
 }
-h2 {  
+h2 {
     font-family: 'futurastd-bold';
 	text-transform:uppercase;
 	color:#f84e61;
@@ -385,7 +385,7 @@ box-shadow:         1px 1px 3px 0px rgba(50, 50, 50, 0.25);
   border-radius: 5px 0 0 5px;
   -moz-border-radius: 5px 0 0 5px;
   -webkit-border-radius: 5px 0 0 5px;
-  background: url(../gfx/fleche.png) no-repeat center #dc5f2e;
+  background: url(/styles/public/gfx/fleche.png) no-repeat center #dc5f2e;
   border-right:2px solid #d15a2c;
   margin-right:22px;
 }
@@ -395,7 +395,7 @@ box-shadow:         1px 1px 3px 0px rgba(50, 50, 50, 0.25);
   height:50px;
   float:left;
   line-height:50px;
-  
+
 }
 .btn:hover,
 .btn:focus{
@@ -406,7 +406,7 @@ box-shadow:         1px 1px 3px 0px rgba(50, 50, 50, 0.25);
    -moz-opacity: 0.80;
    opacity: 0.80;
 
-}	
+}
 #wrapper {
 	width:810px;
   margin: 0 auto;
@@ -426,7 +426,7 @@ box-shadow:         1px 1px 3px 0px rgba(50, 50, 50, 0.25);
 	display:block;
 	width:360px;
 	height:367px;
-	background:url(../gfx/feuille.png) no-repeat;
+	background:url(/styles/public/gfx/feuille.png) no-repeat;
 	position:absolute;
 	top:0;
 	left:10px;
@@ -448,7 +448,7 @@ box-shadow:         1px 1px 3px 0px rgba(50, 50, 50, 0.25);
 	display:block;
 	width:353px;
 	height:181px;
-	background:url(../gfx/feuille-page.png) no-repeat;
+	background:url(/styles/public/gfx/feuille-page.png) no-repeat;
 	position:absolute;
 	top:0;
 	left:10px;
