--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -1,26 +1,26 @@
 {{> head}}
 <div id="wrapper">
-    <img src="gfx/header_accueil.jpg" width="811" height="293" alt="VVF Villages like you" class="header-accueil">
+    <img src="/styles/public/gfx/header_accueil.jpg" width="811" height="293" alt="VVF Villages like you" class="header-accueil">
      <div class="feuille">
-   	  <h1><img src="gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
+   	  <h1><img src="/styles/public/gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
 		  <h2>fêtons ensemble notre<br>nouvelle installation</h2>
       <span>VVF Villages vous fait<br>découvrir ses nouveaux<br>locaux et vous passe<br><b>le bonjour !</b></span>
     </div>
-    <img src="gfx/pola-shopie.png" width="258" height="257" alt="Sophie" class="pola pola-shopie">
-    <img src="gfx/polas-accueil.png" width="381" height="363" alt="Anaëlle et Olivier - Sylvie, Valérie et Dominique" class="pola polas-accueil">
+    <img src="/styles/public/gfx/pola-shopie.png" width="258" height="257" alt="Sophie" class="pola pola-shopie">
+    <img src="/styles/public/gfx/polas-accueil.png" width="381" height="363" alt="Anaëlle et Olivier - Sylvie, Valérie et Dominique" class="pola polas-accueil">
     <div class="col-right">
     	<p><span>Qui sera la plus rapide aujourd'hui pour vous saluer chez VVF Villages</span> L'équipe de Lucie, Bruno ou Fabrice ?</p>
         <div class="col-int">
         	<a href="#" title="Je lance le défi" class="btn"><span></span><b>Je lance le défi</b></a>
             <hr>
-            <a href="#" title="j'aime" class="db left30"><img src="gfx/j-aime-fleches.png" width="223" height="48" alt="j'aime"></a>
-        	<img src="gfx/a-gagner.png" width="300" height="118px" alt="1 an de vacances à gagner ! et 10 week-ends*" class="db left15">
+            <a href="#" title="j'aime" class="db left30"><img src="/styles/public/gfx/j-aime-fleches.png" width="223" height="48" alt="j'aime"></a>
+        	<img src="/styles/public/gfx/a-gagner.png" width="300" height="118px" alt="1 an de vacances à gagner ! et 10 week-ends*" class="db left15">
          </div>
     </div>
 	<hr>
   	<div class="col-video">
         <h3>Bienvenue <span>dans les nouveaux locaux de l'équipe VVF Villages</span></h3>
-        <img src="gfx/video.jpg" width="752" height="414" alt="video">
+        <img src="/styles/public/gfx/video.jpg" width="752" height="414" alt="video">
         <a href="#" title="Réglement" class="reglement">Réglement</a>
         <div class="conditions">*Soumis à conditions</div>
    </div>
