--- a/modules/admin/app/public/views/public/message_fermeture.hbs
+++ b/modules/admin/app/public/views/public/message_fermeture.hbs
@@ -1,17 +1,17 @@
 {{> head}}
 <div id="wrapper">
-    <img src="gfx/header_pages.jpg" width="811" height="164" alt="VVF Villages like you" class="header-pages">
+    <img src="/styles/public/gfx/header_pages.jpg" width="811" height="164" alt="VVF Villages like you" class="header-pages">
      <div class="feuille-page">
-   	  <h1><img src="gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
+   	  <h1><img src="/styles/public/gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
     </div>
-    <img src="gfx/pola-fanny.png" width="247" height="259" alt="Sophie" class="pola pola-fanny">
-    <img src="gfx/pola-mathieu-celine.png" width="244" height="259" alt="Matthieu et Céline" class="pola polas-mathieu-celine">
-    <img src="gfx/pola-terral.png" width="260" height="263" alt="Matthieu et Céline" class="pola pola-terral">
+    <img src="/styles/public/gfx/pola-fanny.png" width="247" height="259" alt="Sophie" class="pola pola-fanny">
+    <img src="/styles/public/gfx/pola-mathieu-celine.png" width="244" height="259" alt="Matthieu et Céline" class="pola polas-mathieu-celine">
+    <img src="/styles/public/gfx/pola-terral.png" width="260" height="263" alt="Matthieu et Céline" class="pola pola-terral">
 	  	<div class="col-middle">
     	<p><span><b>Votre demande a bien<br>été enregistrée !</b> <br>Nous sommes rentrés chez<br> nous, vous recevrez votre<br> Bonjour demain matin </span></p>
-    	<img src="gfx/a-gagner-small.png" width="281" height="111" alt="1 an de vacances à gagner ! et 10 week-ends*">
+    	<img src="/styles/public/gfx/a-gagner-small.png" width="281" height="111" alt="1 an de vacances à gagner ! et 10 week-ends*">
         <div class="tirage">Tirage au sort parmi les <span>fans de la page</span></div>
-         <a href="#" title="j'aime"><img src="gfx/j-aime.png" width="172" height="52" alt="j'aime"></a>
+         <a href="#" title="j'aime"><img src="/styles/public/gfx/j-aime.png" width="172" height="52" alt="j'aime"></a>
     </div>
 	<hr>
   	<div class="col-video">
