--- a/modules/admin/app/public/views/public/partials/head.hbs
+++ b/modules/admin/app/public/views/public/partials/head.hbs
@@ -9,6 +9,8 @@
     <!--[if lt IE 9]>
        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <link href="/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 </head>
 <!--[if lt IE 7]> <body class="ie6"><![endif]-->
 <!--[if IE 7]>    <body class="ie7"><![endif]-->
