--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -13,7 +13,9 @@
         <div class="col-int">
         	<a id="defi" href="#" title="Je lance le défi" class="btn"><span></span><b>Je lance le défi</b></a>
             <hr>
-            <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
+            <div class="db left30">
+              <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
+            </div>
             <!-- <a href="#" title="j'aime" class="db left30"><img src="/styles/public/gfx/j-aime-fleches.png" width="223" height="48" alt="j'aime"></a> -->
         	<img src="/styles/public/gfx/a-gagner.png" width="300" height="118px" alt="1 an de vacances à gagner ! et 10 week-ends*" class="db left15">
          </div>
