--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -12,7 +12,6 @@
     	<p><span>Qui sera la plus rapide aujourd'hui pour vous saluer chez VVF Villages</span> L'équipe de Lucie, Bruno ou Fabrice ?</p>
         <div class="col-int">
           <a id="defi" href="#" title="Je lance le défi" class="btn-defi"><span></span><b>Je lance le défi</b></a>
-            <hr>
             <div class="db left30">
               <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
             </div>
@@ -28,5 +27,25 @@
         <div class="conditions">*Soumis à conditions</div>
    </div>
 </div>
+<div class="modal fade" id="facebookModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 <script src="/scripts/public/accueil_script.js"></script>
 {{> footer}}
