--- a/modules/admin/app/public/views/public/partials/head.hbs
+++ b/modules/admin/app/public/views/public/partials/head.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VVF Villages like you</title>
     <link rel="stylesheet" type="text/css" media="all" href="/styles/public/styles.css" />
-    <link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
     <!--[if lt IE 9]>
        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
