--- a/modules/admin/app/public/styles/public/styles.css
+++ b/modules/admin/app/public/styles/public/styles.css
@@ -289,7 +289,7 @@ strong {
 h1 {
 
 }
-h2 {
+h2, h2#h2defi {
     font-family: 'futurastd-bold';
 	text-transform:uppercase;
 	color:#f84e61;
@@ -297,7 +297,7 @@ h2 {
 	text-align:center;
 	margin-bottom:25px;
 }
-.ie8 h2 {
+.ie8 h2, .ie8 h2#h2defi  {
 	font-weight:bold;
 }
 h3 {
