--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -3,7 +3,7 @@
     <img src="/styles/public/gfx/header_accueil.jpg" width="811" height="293" alt="VVF Villages like you" class="header-accueil">
      <div class="feuille">
    	  <h1><img src="/styles/public/gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
-		  <h2>fêtons ensemble notre<br>nouvelle installation</h2>
+		  <h2 id="h2defi">fêtons ensemble notre<br>nouvelle installation</h2>
       <span>VVF Villages vous fait<br>découvrir ses nouveaux<br>locaux et vous passe<br><b>le bonjour !</b></span>
     </div>
     <img src="/styles/public/gfx/pola-shopie.png" width="258" height="257" alt="Sophie" class="pola pola-shopie">
