--- a/modules/admin/app/public/views/public/page_dattente.hbs
+++ b/modules/admin/app/public/views/public/page_dattente.hbs
@@ -2,7 +2,7 @@
 <div id="wrapper">
     <img src="/styles/public/gfx/header_pages.jpg" width="811" height="164" alt="VVF Villages like you" class="header-pages">
      <div class="feuille-page">
-   	  <h1><img src="/styles/public/gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
+   	  <h1 id="h1defi"><img src="/styles/public/gfx/logo-vvf-like-you.png" width="190" height="111" alt="VVF Villages like you" class="logo"></h1>
     </div>
     <img src="/styles/public/gfx/pola-fanny.png" width="247" height="259" alt="Sophie" class="pola pola-fanny">
     <img src="/styles/public/gfx/pola-mathieu-celine.png" width="244" height="259" alt="Matthieu et Céline" class="pola polas-mathieu-celine">
