--- a/modules/admin/app/public/views/public/partials/head.hbs
+++ b/modules/admin/app/public/views/public/partials/head.hbs
@@ -10,6 +10,7 @@
        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link href="/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/lib/bootstrap/dist/js/bootstrap.min.js" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 </head>
 <!--[if lt IE 7]> <body class="ie6"><![endif]-->
