--- a/modules/admin/app/public/views/public/partials/head.hbs
+++ b/modules/admin/app/public/views/public/partials/head.hbs
@@ -11,7 +11,7 @@
     <![endif]-->
     <link href="/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <link href="/lib/bootstrap/dist/js/bootstrap.min.js" rel="stylesheet">
+    <link href="/lib/bootstrap/dist/js/bootstrap.js" rel="stylesheet">
 </head>
 <!--[if lt IE 7]> <body class="ie6"><![endif]-->
 <!--[if IE 7]>    <body class="ie7"><![endif]-->
