--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -27,19 +27,25 @@
         <div class="conditions">*Soumis à conditions</div>
    </div>
 </div>
-<div class="modal fade" id="facebookModal" tabindex="-1" role="dialog" aria-labelledby="facebookModalLabel" aria-hidden="true">
+<div aria-hidden="false" aria-labelledby="facebookModalLabel" role="dialog" tabindex="-1" id="facebookModal" class="modal fade in" style="display: block;">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="facebookModalLabel">Modal title</h4>
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="facebookModalLabel">VVF Villages va vous envoyer une photo</h4>
       </div>
       <div class="modal-body">
-        ...
-      </div>
+Nos équipes viennent d'être allertées que vous vouliez un bonjour en photo<br><br>
+  <div class="form-group">
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Tapez votre message qui accompagnera la photo">
+  </div>
+  <div class="text-center">
+<img src="/styles/public/gfx/exemple.png">
+ <div></div></div>
+</div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+
+        <button class="btn btn-primary" type="button">J'enregistre mon message</button>
       </div>
     </div>
   </div>
