--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -27,7 +27,7 @@
         <div class="conditions">*Soumis à conditions</div>
    </div>
 </div>
-<div aria-hidden="false" aria-labelledby="facebookModalLabel" role="dialog" tabindex="-1" id="facebookModal" class="modal fade in" style="display: block;">
+<div class="modal fade" id="facebookModal" tabindex="-1" role="dialog" aria-labelledby="facebookModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
