--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -37,7 +37,7 @@
       <div class="modal-body">
 Nos équipes viennent d'être allertées que vous vouliez un bonjour en photo<br><br>
   <div class="form-group">
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Tapez votre message qui accompagnera la photo">
+    <input type="text" class="form-control" id="message" placeholder="Tapez votre message qui accompagnera la photo">
   </div>
   <div class="text-center">
 <img src="/styles/public/gfx/exemple.png">
@@ -45,7 +45,7 @@ Nos équipes viennent d'être allertées que vous vouliez un bonjour en photo<br
 </div>
       <div class="modal-footer">
 
-        <button class="btn btn-primary" type="button">J'enregistre mon message</button>
+        <button class="btn btn-primary" type="button" id="publish">J'enregistre mon message</button>
       </div>
     </div>
   </div>
