--- a/modules/admin/app/public/views/public/fermeture-weekend.hbs
+++ b/modules/admin/app/public/views/public/fermeture-weekend.hbs
@@ -11,7 +11,7 @@
     	<p><span><b>Votre demande a bien<br>été enregistrée !</b> <br>Profitez de votre week-end,<br>vous recevrez votre <br>Bonjour lundi matin</span></p>
     	<img src="/styles/public/gfx/a-gagner-small.png" width="281" height="111" alt="1 an de vacances à gagner ! et 10 week-ends*">
         <div class="tirage">Tirage au sort parmi les <span>fans de la page</span></div>
-         <a href="#" title="j'aime"><img src="/styles/public/gfx/j-aime.png" width="172" height="52" alt="j'aime"></a>
+        <div class="fb-like" data-href="https://www.facebook.com/VVFVillages.pageofficielle" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
     </div>
 	<hr>
   	<div class="col-video">
