--- a/modules/admin/app/public/views/public/partials/footer.hbs
+++ b/modules/admin/app/public/views/public/partials/footer.hbs
@@ -1,16 +1,5 @@
 
+<script src="/scripts/public/accueil_script.js"></script>
 <div id="fb-root"></div>
-<script>
-    (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) {
-        return;
-    }
-    js = d.createElement(s);
-    js.id = id;
-    js.src = "//connect.facebook.net/fr_FR/sdk.js";
-    fjs.parentNode.insertBefore(js, fjs);
-}(document, "script", "facebook-jssdk"));
-</script>
 </body>
 </html>
