--- a/modules/admin/app/public/views/public/partials/footer.hbs
+++ b/modules/admin/app/public/views/public/partials/footer.hbs
@@ -1,5 +1,5 @@
 
-<script src="/scripts/public/accueil_script.js"></script>
+<script src="/scripts/public/script.js"></script>
 <div id="fb-root"></div>
 </body>
 </html>
