--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -32,12 +32,12 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="facebookModalLabel">VVF Villages va vous envoyer une photo</h4>
+        <h4 class="modal-title" id="facebookModalLabel">Les équipes VVF Villages se préparent et vous envoient votre photo</h4>
       </div>
       <div class="modal-body">
-Nos équipes viennent d'être allertées que vous vouliez un bonjour en photo<br><br>
+Tapez ici le message que vous souhaitez faire apparaître avec la photo sur votre mur...<br><br>
   <div class="form-group">
-    <input type="text" class="form-control" id="message" placeholder="Tapez votre message qui accompagnera la photo">
+    <input type="text" class="form-control" id="message" placeholder="Mon message">
   </div>
   <div class="text-center">
 <img src="/styles/public/gfx/exemple.png">
