--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -32,7 +32,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="facebookModalLabel">Les équipes VVF Villages se préparent et vous envoient votre photo</h4>
+        <h4 class="modal-title" id="facebookModalLabel">Les équipes VVF Villages se préparent<br>et vous envoient votre photo</h4>
       </div>
       <div class="modal-body">
 Tapez ici le message que vous souhaitez faire apparaître avec la photo sur votre mur...<br><br>
