--- a/modules/admin/app/public/views/public/accueil.hbs
+++ b/modules/admin/app/public/views/public/accueil.hbs
@@ -32,12 +32,15 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="facebookModalLabel">Les équipes VVF Villages se préparent<br>et vous envoient votre photo</h4>
+        <h4 class="modal-title" id="facebookModalLabel">Les équipes VVF Villages se préparent
+<br>et vous envoient votre photo&nbsp;!
+Sera-t-elle plus folle
+<br>que celle en exemple ci-dessous&nbsp;?</h4>
       </div>
       <div class="modal-body">
-Tapez ici le message que vous souhaitez faire apparaître avec la photo sur votre mur...<br><br>
+      <br>
   <div class="form-group">
-    <input type="text" class="form-control" id="message" placeholder="Mon message">
+    <input type="text" class="form-control" id="message" placeholder="Je tape ici le message que je souhaite faire apparaître avec la photo sur mon mur...">
   </div>
   <div class="text-center">
 <img src="/styles/public/gfx/exemple.png">
